# rust-lvm

./: Cargo.toml  README.md
lvm-core/: Cargo.toml
lvm-core/src/: add.rs  instruction.rs  lib.rs  load.rs  operand16.rs  operand8.rs  program.rs  rindex.rs
lvm-machine/: Cargo.toml
lvm-machine/src/: lib.rs  pbytes.rs  vm.rs
lvm-parser/: Cargo.toml
lvm-parser/src/: add.rs  instruction.rs  lib.rs  load.rs  operand16.rs  operand8.rs  program.rs  rindex.rs
lvm-repl/: Cargo.toml
lvm-repl/src/: main.rs
lvm-repl/src/repl/: builder.rs  mod.rs  repl.rs
src/: main.rs
