[workspace]
members = [
    "lvm-core",
    "lvm-parser",
    "lvm-machine",
    "lvm-repl",
]

[package]
name = "rust-lvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lvm-core = { path = "./lvm-core", version = "=0.1.0" }
lvm-parser = { path = "./lvm-parser", version = "=0.1.0" }
lvm-machine = { path = "./lvm-machine", version = "=0.1.0" }
