[package]
name = "lvm-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rustyline = "10.0"
rustyline-derive = "0.7"
lvm-core = { path = "./../lvm-core", version = "=0.1.0" }
lvm-parser = { path = "./../lvm-parser", version = "=0.1.0" }
lvm-machine = { path = "./../lvm-machine", version = "=0.1.0" }
